name:                   scan
version:                0.0.0
build-type:             Simple
cabal-version:          >= 1.2

executable              scan
    main-is:            scan.hs
    build-depends:      base
                      , network
                      , HTTP
                      , split
                      , text
                      , MissingH

    ghc-options:       -O2
